Watch GraphQL schema (#7771)
This makes the webapp automatically update the generated TypeScript
typings similar to how we do it in the editor.
This makes it easier for new devs as it saves them one command to run.

--- a/web/package.json
+++ b/web/package.json
@@ -7,10 +7,12 @@
   },
   "scripts": {
     "test": "npm run build-tests && mocha --opts mocha.opts",
-    "build": "webpack --config webpack.config.ts --progress --profile --colors",
+    "build": "npm run graphql && npm run webpack",
+    "watch": "concurrently --raw \"npm run watch-graphql\" \"npm run webpack -- --watch\"",
+    "webpack": "webpack --config webpack.config.ts --profile --colors",
     "build-tests": "tsc -p ./tsconfig.test.json",
-    "watch": "npm run build -- --watch",
-    "graphql": "get-graphql-schema http://localhost:3080/.api/graphql --json | gql2ts -o src/gqlschema.d.ts && tsfmt -r src/gqlschema.d.ts",
+    "graphql": "cat ../cmd/frontend/internal/graphqlbackend/schema.graphql | gql2ts -o typings/graphqlschema.d.ts",
+    "watch-graphql": "chokidar ../cmd/frontend/internal/graphqlbackend/schema.graphql --initial -c \"npm run graphql\"",
     "lint": "npm run tslint && npm run stylelint && npm run tsfmt-verify",
     "tslint": "tslint -c tslint.json -p tsconfig.json 'src/**/*.ts?(x)'",
     "stylelint": "stylelint 'src/**/*.scss'",
@@ -42,10 +44,11 @@
     "babel-plugin-transform-new-target": "^7.0.0-beta.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
+    "chokidar-cli": "^1.2.0",
+    "concurrently": "^3.5.0",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
-    "get-graphql-schema": "^2.1.1",
-    "gql2ts": "^1.2.1",
+    "gql2ts": "^1.3.0",
     "jsdom": "^11.2.0",
     "mocha": "^3.5.3",
     "node-sass": "^4.5.3",
