--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -10,6 +10,8 @@
     "sourceMap": true,
     "noEmit": true,
     "downlevelIteration": true,
+    "skipLibCheck": true,
+    "strictFunctionTypes": false,
     "plugins": [
       {
         "name": "tslint-language-service"
