--- a/web/package.json
+++ b/web/package.json
@@ -47,6 +47,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "chokidar-cli": "^1.2.0",
+    "chrome-launcher": "^0.8.1",
     "chromeless": "^1.3.0",
     "concurrently": "^3.5.0",
     "css-loader": "^0.28.4",
