dev: bump syntect_server JSON upload limit to 10MiB (1MiB by default); helps #7929

--- a/dev/Procfile
+++ b/dev/Procfile
@@ -6,5 +6,5 @@ lsp-proxy: .bin/lsp-proxy -prof-http=:6061
 xlang-go: .bin/xlang-go -mode=tcp -addr=:4389 -prof-http=:6062
 frontend: vendor/.bin/rego -installenv=GOGC=off,GODEBUG=sbrk=1 -tags="dev" -extra-watches='cmd/frontend/internal/graphqlbackend/schema.graphql' sourcegraph.com/sourcegraph/sourcegraph/cmd/frontend
 web: sh -c "cd ./web && npm install && npm run watch"
-syntect_server: docker run --name=syntect_server --rm -p3700:80 -e QUIET='true' sourcegraph/syntect_server
+syntect_server: docker run --name=syntect_server --rm -p3700:80 -e QUIET='true' -e ROCKET_LIMITS='{json=10485760}' sourcegraph/syntect_server
 # jaeger: docker run --name=jaeger --rm -p5775:5775/udp -p6831:6831/udp -p6832:6832/udp -p5778:5778 -p16686:16686 -p14268:14268 jaegertracing/all-in-one:latest
