--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@sourcegraph/prettierrc": "^1.1.0",
     "@sourcegraph/tsconfig": "^2.0.0",
+    "@sourcegraph/tslint": "^5.7.0",
     "@sourcegraph/tslint-config": "^7.0.0",
     "@types/auth0-js": "^8.6.3",
     "@types/escape-string-regexp": "0.0.31",
@@ -64,7 +65,7 @@
     "stylelint-config-recommended": "^1.0.0",
     "ts-loader": "^3.1.1",
     "ts-node": "^3.3.0",
-    "tslint": "^5.7.0",
+    "tslint": "^5.8.0",
     "tslint-language-service": "^0.9.6",
     "typescript": "^2.6.1",
     "typescript-formatter": "^6.0.0",
