--- a/web/package.json
+++ b/web/package.json
@@ -54,6 +54,7 @@
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "gql2ts": "^1.3.0",
+    "javascript-typescript-langserver": "^2.5.4",
     "jsdom": "^11.2.0",
     "mocha": "^3.5.3",
     "node-sass": "^4.5.3",
