--- a/web/package.json
+++ b/web/package.json
@@ -16,13 +16,13 @@
     "watch-graphql": "chokidar ../cmd/frontend/internal/graphqlbackend/schema.graphql --initial -c \"npm run graphql\"",
     "lint": "npm run tslint && npm run stylelint && npm run prettier",
     "tslint": "tslint -c tslint.json -p tsconfig.json -e 'node_modules/**' '**/*.ts?(x)'",
-    "stylelint": "stylelint 'src/**/*.scss'",
+    "stylelint": "stylelint 'src/**/*.scss' --custom-formatter ./node_modules/stylelint-formatter-compact/index.js",
     "prettier": "prettier '**/*.{js?(on),ts?(x)}' --write --list-different"
   },
   "author": "John Rothfels <john@sourcegraph.com>",
   "license": "MIT",
   "devDependencies": {
-    "@sourcegraph/prettierrc": "^1.1.0",
+    "@sourcegraph/prettierrc": "^2.0.0",
     "@sourcegraph/tsconfig": "^2.0.0",
     "@sourcegraph/tslint": "^5.7.0",
     "@sourcegraph/tslint-config": "^7.0.0",
@@ -64,7 +64,9 @@
     "sass-loader": "^6.0.6",
     "stylelint": "^8.1.1",
     "stylelint-config-prettier": "^1.0.2",
-    "stylelint-config-recommended": "^1.0.0",
+    "stylelint-config-standard": "^17.0.0",
+    "stylelint-formatter-compact": "^0.1.0",
+    "stylelint-scss": "^2.1.0",
     "ts-loader": "^3.1.1",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
