--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
   "author": "John Rothfels <john@sourcegraph.com>",
   "license": "MIT",
   "devDependencies": {
+    "@sourcegraph/chromeless": "^1.3.0",
     "@sourcegraph/prettierrc": "^2.0.0",
     "@sourcegraph/tsconfig": "^2.0.0",
     "@sourcegraph/tslint": "^5.7.0",
@@ -50,7 +51,6 @@
     "babel-preset-env": "^1.6.0",
     "chokidar-cli": "^1.2.0",
     "chrome-launcher": "^0.8.1",
-    "chromeless": "^1.3.0",
     "concurrently": "^3.5.0",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
