Print stylish errors for stylelint

--- a/web/.vscode/tasks.json
+++ b/web/.vscode/tasks.json
@@ -21,7 +21,7 @@
     },
     {
       "type": "npm",
-      "script": "stylelint",
+      "script": "stylelint-compact",
       "problemMatcher": {
         "owner": "stylelint",
         "applyTo": "closedDocuments",
