--- a/web/package.json
+++ b/web/package.json
@@ -87,6 +87,8 @@
     "escape-string-regexp": "^1.0.5",
     "highlight.js": "^9.12.0",
     "immutable": "^3.8.1",
+    "inspire-tree": "^4.2.0",
+    "inspire-tree-dom": "^4.0.0",
     "js-base64": "^2.3.2",
     "lodash": "^4.11.2",
     "marked": "^0.3.6",
