--- a/web/package.json
+++ b/web/package.json
@@ -59,6 +59,7 @@
     "jsdom": "^11.2.0",
     "mocha": "^3.5.3",
     "node-sass": "^4.7.2",
+    "node-sass-import-once": "^1.2.0",
     "postcss-loader": "^2.0.6",
     "prettier": "^1.8.1",
     "sass-loader": "^6.0.6",
