--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "test": "npm run build-tests && mocha --opts mocha.opts",
+    "cover": "npm run build-tests && nyc --require source-map-support/register mocha --opts mocha.opts",
     "test-e2e": "npm run build-tests && mocha --opts mocha.opts.e2e",
     "build": "npm run graphql && npm run webpack",
     "watch": "concurrently --raw \"npm run watch-graphql\" \"npm run webpack -- --watch\"",
@@ -22,6 +23,15 @@
   },
   "author": "John Rothfels <john@sourcegraph.com>",
   "license": "MIT",
+  "nyc": {
+    "include": [
+      "out/**/*.js"
+    ],
+    "exclude": [
+      "out/**/*.test.js",
+      "out/**/*.test.e2e.js"
+    ]
+  },
   "devDependencies": {
     "@sourcegraph/chromeless": "^1.3.0",
     "@sourcegraph/prettierrc": "^2.0.0",
@@ -60,9 +70,11 @@
     "mocha": "^3.5.3",
     "node-sass": "^4.7.2",
     "node-sass-import-once": "^1.2.0",
+    "nyc": "^11.3.0",
     "postcss-loader": "^2.0.6",
     "prettier": "^1.9.0",
     "sass-loader": "^6.0.6",
+    "source-map-support": "^0.5.0",
     "stylelint": "^8.1.1",
     "stylelint-config-prettier": "^1.0.2",
     "stylelint-config-standard": "^17.0.0",
