use Monaco editor for user/org JSON settings (feature-flagged OFF by default)
Run `localStorage.monacoSettingsEditor=true` in the JS console and reload to use the Monaco editor on user/org profile pages for the settings JSON editor.

See known issues in MonacoSettingsEditor.tsx TODO list. These will need to be addressed before enabling this for all users (not behind a feature flag).

--- a/web/package.json
+++ b/web/package.json
@@ -37,6 +37,7 @@
     "@sourcegraph/tsconfig": "^2.0.0",
     "@sourcegraph/tslint-config": "^9.0.4",
     "@types/auth0-js": "^8.6.3",
+    "@types/copy-webpack-plugin": "^4.0.1",
     "@types/escape-string-regexp": "0.0.31",
     "@types/extract-text-webpack-plugin": "^3.0.0",
     "@types/highlight.js": "^9.1.10",
@@ -48,6 +49,7 @@
     "@types/node": "^8.0.28",
     "@types/react": "^16.0.29",
     "@types/react-dom": "^16.0.3",
+    "@types/react-monaco-editor": "^0.10.0",
     "@types/react-router": "^4.0.19",
     "@types/react-router-dom": "^4.2.3",
     "@types/strip-json-comments": "0.0.30",
@@ -58,10 +60,14 @@
     "babel-plugin-transform-new-target": "^7.0.0-beta.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "chokidar-cli": "^1.2.0",
     "chrome-launcher": "^0.8.1",
     "chromeless": "^1.4.0",
     "concurrently": "^3.5.0",
+    "copy-webpack-plugin": "^4.3.0",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "gql2ts": "^1.3.0",
@@ -102,6 +108,7 @@
     "marked": "^0.3.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-monaco-editor": "^0.13.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-visibility-sensor": "^3.10.1",
