--- a/web/package.json
+++ b/web/package.json
@@ -47,6 +47,7 @@
     "@types/marked": "^0.0.28",
     "@types/mocha": "^2.2.43",
     "@types/node": "^8.0.28",
+    "@types/p-retry": "^1.0.1",
     "@types/react": "^16.0.29",
     "@types/react-dom": "^16.0.3",
     "@types/react-monaco-editor": "^0.10.0",
@@ -77,6 +78,7 @@
     "node-sass": "^4.7.2",
     "node-sass-import-once": "^1.2.0",
     "nyc": "^11.3.0",
+    "p-retry": "^1.0.0",
     "postcss-loader": "^2.0.6",
     "prettier": "^1.9.2",
     "sass-loader": "^6.0.6",
