--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,13 @@
     "**/node_modules": true,
     "**/bower_components": true,
     "ui/assets": true
-  }
+  },
+  "json.schemas": [
+    {
+      "fileMatch": [
+        "dev/config.json"
+      ],
+      "url": "/schema/site.schema.json"
+    }
+  ]
 }
