--- a/dev/Procfile
+++ b/dev/Procfile
@@ -8,4 +8,6 @@ frontend: .bin/frontend
 watch-frontend: $PWD/web/node_modules/.bin/chokidar "**/*.go" "cmd/frontend/internal/graphqlbackend/schema.graphql" -c "./dev/go-install.sh && $GOREMAN run restart frontend"
 web: sh -c "npm --prefix ./web install && npm --prefix ./web run watch"
 syntect_server: ./dev/syntect_server
+zoekt-indexserver: ./dev/zoekt-wrapper zoekt-indexserver -data_dir $HOME/.sourcegraph/zoekt -mirror_config ./dev/zoekt-mirror.json -mirror_duration 10m -fetch_interval 1m
+zoekt-webserver: ./dev/zoekt-wrapper zoekt-webserver -index $HOME/.sourcegraph/zoekt -rest_api
 # jaeger: docker run --name=jaeger --rm -p5775:5775/udp -p6831:6831/udp -p6832:6832/udp -p5778:5778 -p16686:16686 -p14268:14268 jaegertracing/all-in-one:latest
