--- a/dev/Procfile
+++ b/dev/Procfile
@@ -9,5 +9,5 @@ watch-frontend: $PWD/web/node_modules/.bin/chokidar "**/*.go" "cmd/frontend/inte
 web: sh -c "npm --prefix ./web install && npm --prefix ./web run watch"
 syntect_server: ./dev/syntect_server
 zoekt-indexserver: ./dev/zoekt-wrapper zoekt-indexserver -data_dir $HOME/.sourcegraph/zoekt -mirror_config ./dev/zoekt-mirror.json -mirror_duration 10m -fetch_interval 1m
-zoekt-webserver: ./dev/zoekt-wrapper zoekt-webserver -index $HOME/.sourcegraph/zoekt -rest_api
+zoekt-webserver: ./dev/zoekt-wrapper zoekt-webserver -index $HOME/.sourcegraph/zoekt/index -rest_api
 # jaeger: docker run --name=jaeger --rm -p5775:5775/udp -p6831:6831/udp -p6832:6832/udp -p5778:5778 -p16686:16686 -p14268:14268 jaegertracing/all-in-one:latest
