--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,5 @@
 {
   // See http://go.microsoft.com/fwlink/?LinkId=827846
   // for the documentation about the extensions.json format
-  "recommendations": ["lukehoban.Go", "eg2.tslint", "EditorConfig.editorconfig"]
+  "recommendations": ["lukehoban.Go", "eg2.tslint", "EditorConfig.editorconfig", "esbenp.prettier-vscode"]
 }
