--- a/web/package.json
+++ b/web/package.json
@@ -32,8 +32,9 @@
     ]
   },
   "devDependencies": {
+    "@sourcegraph/prettierrc": "^2.1.0",
     "@sourcegraph/tsconfig": "^2.0.0",
-    "@sourcegraph/tslint-config": "^10.0.0",
+    "@sourcegraph/tslint-config": "^10.0.1",
     "@types/auth0-js": "^8.6.3",
     "@types/copy-webpack-plugin": "^4.0.1",
     "@types/escape-string-regexp": "0.0.31",
@@ -78,7 +79,6 @@
     "nyc": "^11.3.0",
     "p-retry": "^1.0.0",
     "postcss-loader": "^2.0.6",
-    "prettier": "^1.9.2",
     "sass-loader": "^6.0.6",
     "source-map-support": "^0.5.0",
     "stylelint": "^8.3.1",
