--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,10 +2,11 @@
   // See http://go.microsoft.com/fwlink/?LinkId=827846
   // for the documentation about the extensions.json format
   "recommendations": [
-    "lukehoban.Go",
-    "eg2.tslint",
     "EditorConfig.editorconfig",
+    "eg2.tslint",
     "esbenp.prettier-vscode",
+    "kumar-harsh.graphql-for-vscode",
+    "lukehoban.Go",
     "shinnn.stylelint"
   ]
 }
