GraphQL IntelliSense :fire:

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -15,6 +15,11 @@
     "plugins": [
       {
         "name": "tslint-language-service"
+      },
+      {
+        "name": "ts-graphql-plugin",
+        "schema": "graphqlschema.json",
+        "tag": "gql"
       }
     ]
   }
