--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,7 @@
     "test-e2e": "npm run build-tests && mocha --opts mocha.opts.e2e",
     "build": "npm run graphql && npm run webpack",
     "watch": "concurrently --raw \"npm run watch-graphql\" \"npm run webpack -- --watch\"",
-    "webpack": "webpack --config webpack.config.ts --profile --colors",
+    "webpack": "webpack --config webpack.config.ts --colors",
     "build-tests": "tsc -p ./tsconfig.test.json",
     "graphql": "cat ../cmd/frontend/internal/graphqlbackend/schema.graphql | gql2ts -o typings/graphqlschema.d.ts && node introspect_schema",
     "watch-graphql": "chokidar ../cmd/frontend/internal/graphqlbackend/schema.graphql --initial -c \"npm run graphql\"",
