--- a/dev/Procfile
+++ b/dev/Procfile
@@ -7,7 +7,7 @@ lsp-proxy: .bin/lsp-proxy -prof-http=:6061
 xlang-go: .bin/xlang-go -mode=tcp -addr=:4389 -prof-http=:6062
 frontend: $EXEC_FRONTEND .bin/frontend
 watch-go: node_modules/.bin/chokidar --silent "**/*.go" "cmd/frontend/internal/graphqlbackend/schema.graphql" --ignore node_modules --ignore web -c "./dev/go-install.sh && $GOREMAN run restart frontend"
-web: sh -c "npm --silent --prefix ./web install && npm --silent --prefix ./web run watch"
+web: sh -c "npm --prefix ./web install && npm --prefix ./web run watch"
 syntect_server: ./dev/syntect_server
 zoekt-indexserver: ./dev/zoekt-wrapper zoekt-indexserver -data_dir $HOME/.sourcegraph/zoekt -mirror_config ./dev/zoekt-mirror.json -mirror_duration 10m -fetch_interval 1m
 zoekt-webserver: ./dev/zoekt-wrapper zoekt-webserver -index $HOME/.sourcegraph/zoekt/index -rest_api
