generate TypeScript .d.ts defs from site/settings JSON Schemas

--- a/web/package.json
+++ b/web/package.json
@@ -10,11 +10,13 @@
     "cover": "npm run build-tests && nyc --require source-map-support/register mocha --opts mocha.opts",
     "test-e2e": "npm run build-tests && mocha --opts mocha.opts.e2e",
     "build": "npm run graphql && npm run webpack",
-    "watch": "concurrently --raw \"npm run watch-graphql\" \"npm run webpack -- --watch\"",
+    "watch": "concurrently --raw \"npm run watch-graphql\" \"npm run watch-schema\" \"npm run webpack -- --watch\"",
     "webpack": "webpack --config webpack.config.ts --colors",
     "build-tests": "tsc -p ./tsconfig.test.json",
     "graphql": "cat ../cmd/frontend/internal/graphqlbackend/schema.graphql | gql2ts -o typings/graphqlschema.d.ts && node introspect_schema",
     "watch-graphql": "chokidar --silent ../cmd/frontend/internal/graphqlbackend/schema.graphql --initial -c \"npm run graphql\"",
+    "schema": "export DEBUG=; mkdir -p src/schema && cd ../schema && json2ts -i settings.schema.json -o ../web/src/schema/settings.schema.d.ts && json2ts -i site.schema.json -o ../web/src/schema/site.schema.d.ts && cd ../web && prettier --write src/schema/*.d.ts",
+    "watch-schema": "chokidar --silent '../schema/**.schema.json' --initial -c 'npm run schema'",
     "lint": "npm run tslint && npm run stylelint",
     "tslint": "tslint -c tslint.json -p tsconfig.json -e 'node_modules/**' '**/*.ts?(x)'",
     "stylelint": "stylelint 'src/**/*.scss'",
@@ -74,6 +76,7 @@
     "gql2ts": "^1.4.0",
     "javascript-typescript-langserver": "^2.5.4",
     "jsdom": "^11.2.0",
+    "json-schema-to-typescript": "^5.2.2",
     "mocha": "^3.5.3",
     "node-sass": "^4.7.2",
     "node-sass-import-once": "^1.2.0",
