--- a/web/package.json
+++ b/web/package.json
@@ -101,6 +101,7 @@
   },
   "dependencies": {
     "@sourcegraph/icons": "^1.9.0",
+    "@sqs/jsonc-parser": "^1.0.1",
     "auth0-js": "^8.12.0",
     "bootstrap": "^4.0.0-beta",
     "copy-to-clipboard": "^3.0.7",
