Implement new trigram indexing based on bloom filters

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,4 +71,7 @@
   "shellformat.flag": "-i 2 -ci",
   "vscode-graphql.useSchemaFileDefinitions": true,
   "jest.jestCommandLine": "yarn -s test",
+  "files.watcherExclude": {
+    "**/target": true,
+  },
 }
