--- a/cmd/gitserver/Dockerfile
+++ b/cmd/gitserver/Dockerfile
@@ -33,9 +33,14 @@ LABEL com.sourcegraph.github.url=https://github.com/sourcegraph/sourcegraph/comm
 # hadolint ignore=DL3018
 RUN apk add --no-cache \
     # Gitserver requires Git protocol v2 https://github.com/sourcegraph/sourcegraph/issues/13168
-    'git>=2.18' \
-    openssh-client \
+    git \
     git-p4 \
+    --repository=http://dl-cdn.alpinelinux.org/alpine/edge/main
+
+
+# hadolint ignore=DL3018
+RUN apk add --no-cache \
+    openssh-client \
     python2 \
     python3
 
