--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "yarn": "^1.22.4"
   },
   "scripts": {
+    "preinstall": "yarn cache clean --all",
     "prettier": "prettier '**/{*.{js?(on),ts?(x),graphql,md,scss},.*.js?(on)}' --write --list-different --config prettier.config.js",
     "prettier-check": "yarn -s run prettier --write=false",
     "all:eslint": "DOCSITE_LIST=\"$(./dev/docsite.sh -config doc/docsite.json ls)\" dev/foreach-ts-project.sh yarn -s run eslint --quiet",
