fix missing git for server

--- a/cmd/server/Dockerfile
+++ b/cmd/server/Dockerfile
@@ -33,12 +33,11 @@ LABEL org.opencontainers.image.version=${VERSION}
 LABEL com.sourcegraph.github.url=https://github.com/sourcegraph/sourcegraph/commit/${COMMIT_SHA}
 
 # hadolint ignore=DL3018
-RUN apk add --no-cache -verbose \
+RUN apk add --no-cache --verbose \
     # We require git>=2.30 because we use git maintenance.
     'git>=2.30' \
     git-p4 \
     --repository=http://dl-cdn.alpinelinux.org/alpine/v3.15/main  \
-    && apk add --no-cache --verbose \
     # NOTE that the Postgres version we run is different
     # from our *Minimum Supported Version* which alone dictates
     # the features we can depend on. See this link for more information:
