split apk add for server

--- a/cmd/server/Dockerfile
+++ b/cmd/server/Dockerfile
@@ -35,12 +35,14 @@ LABEL com.sourcegraph.github.url=https://github.com/sourcegraph/sourcegraph/comm
 # hadolint ignore=DL3018
 RUN apk add --no-cache --verbose \
     # We require git>=2.30 because we use git maintenance.
-    'git>=2.30' --repository=http://dl-cdn.alpinelinux.org/alpine/v3.15/main  \
+    'git>=2.30' \
     git-p4 \
+    --repository=http://dl-cdn.alpinelinux.org/alpine/v3.15/main  \
     # NOTE that the Postgres version we run is different
     # from our *Minimum Supported Version* which alone dictates
     # the features we can depend on. See this link for more information:
     # https://github.com/sourcegraph/sourcegraph/blob/main/doc/dev/postgresql.md#version-requirements
+    && apk add --no-cache --verbose \
     'bash=5.0.17-r0' \
     'redis=~5.0' \
     python2 \
