fix autobuildsherrif cron config

--- a/.buildkite/pipeline.devx-cron.yml
+++ b/.buildkite/pipeline.devx-cron.yml
@@ -11,8 +11,8 @@ steps:
       - dev/bkstats/run.sh
     agents: { queue: standard }
 
-  - label: ":buildkite: 🤠 Run automated buildsheriff"
-    if: build.message == "auto-buildsheriff"
+  - label: ":buildkite: 🤠 Run autobuildsherrif"
+    if: build.message == "autobuildsherrif"
     command:
-      - dev/buildsheriff/run.sh
+      - dev/autobuildsherrif/run.sh
     agents: { queue: standard }
