--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -136,7 +136,7 @@
       "script": "watch",
       "group": "build",
       "isBackground": true,
-      "problemMatcher": ["$ts-checker-webpack-watch", "$ts-checker-eslint-webpack-watch"]
+      "problemMatcher": ["$ts-checker-webpack-watch", "$ts-checker-eslint-webpack-watch"],
     },
     {
       "label": "watch-vscode-dev-web",
@@ -145,7 +145,7 @@
       "script": "watch:web",
       "group": "build",
       "isBackground": true,
-      "problemMatcher": ["$ts-checker-webpack-watch", "$ts-checker-eslint-webpack-watch"]
-    }
+      "problemMatcher": ["$ts-checker-webpack-watch", "$ts-checker-eslint-webpack-watch"],
+    },
   ],
 }
