Build LSIF dumps on HEAD of pull request, not merge commit

--- a/.github/workflows/lsif-go.yml
+++ b/.github/workflows/lsif-go.yml
@@ -23,6 +23,8 @@ jobs:
       # Setup
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
 
       # Run lsif-go
       - name: Run lsif-go
