--- a/.gitignore
+++ b/.gitignore
@@ -104,7 +104,7 @@ package-lock.json
 coverage/
 out/
 client/shared/src/graphql/schema.ts
-client/web/src/schema/*
+client/shared/src/schema/*
 puppeteer/
 package-lock.json
 /dist
