--- a/package.json
+++ b/package.json
@@ -214,10 +214,10 @@
     "@types/testing-library__jest-dom": "5.9.5",
     "@types/textarea-caret": "3.0.0",
     "@types/uuid": "8.0.1",
-    "@types/vscode": "^1.61.0",
-    "@types/webpack-bundle-analyzer": "^4.4.1",
-    "@types/webpack-dev-server": "^4.0.3",
-    "@types/webpack-manifest-plugin": "^3.0.5",
+    "@types/vscode": "1.61.0",
+    "@types/webpack-bundle-analyzer": "4.4.1",
+    "@types/webpack-dev-server": "4.0.3",
+    "@types/webpack-manifest-plugin": "3.0.5",
     "abort-controller": "^3.0.0",
     "autoprefixer": "^10.2.1",
     "babel-jest": "^25.5.1",
