moved steps folder to wildcard component, updated imports and re-exported components and hooks in client/wildcard/src/components/index.ts

--- a/client/web/tsconfig.json
+++ b/client/web/tsconfig.json
@@ -16,6 +16,6 @@
     { "path": "../../schema" },
     { "path": "../storybook" },
   ],
-  "include": ["**/*", ".*", "./src/**/*.json"],
+  "include": ["**/*", ".*", "./src/**/*.json", "../wildcard/src/components/Steps"],
   "exclude": ["../../node_modules", "./node_modules", "./out", "src/end-to-end", "src/regression", "src/integration"],
 }
