cmd/gitserver: update gitserver Dockerfile

--- a/cmd/gitserver/Dockerfile
+++ b/cmd/gitserver/Dockerfile
@@ -45,7 +45,8 @@ RUN apk add --no-cache \
     cmake \
     make \
     python2 \
-    python3
+    python3 \
+    bash
 
 COPY --from=p4cli /usr/local/bin/p4 /usr/local/bin/p4
 
@@ -58,9 +59,10 @@ RUN tar zxf /lib-x64.tgz --directory /
 
 # p4-fusion installation
 # Fetching p4 sources archive
-RUN wget https://github.com/salesforce/p4-fusion/archive/refs/tags/v1.2.zip && \
-    mv v1.2.zip /usr/local/bin && \
-    unzip /usr/local/bin/v1.2.zip -d /usr/local/bin
+RUN wget https://github.com/salesforce/p4-fusion/archive/refs/tags/v1.4.tar.gz && \
+    mv v1.4.tar.gz /usr/local/bin && \
+    mkdir -p /usr/local/bin/p4-fusion-src && \
+    tar -C /usr/local/bin/p4-fusion-src -xzvf /usr/local/bin/v1.4.tar.gz --strip 1
 
 # We need a specific version of OpenSSL
 RUN wget https://www.openssl.org/source/openssl-1.0.2t.tar.gz && tar -xzvf openssl-1.0.2t.tar.gz
@@ -71,19 +73,19 @@ RUN ./config && make && make install
 
 # We also need Helix Core C++ API to build p4-fusion
 RUN wget https://www.perforce.com/downloads/perforce/r21.1/bin.linux26x86_64/p4api.tgz && \
-    mkdir -p /usr/local/bin/p4-fusion-1.2/vendor/helix-core-api/linux && \
-    mv p4api.tgz /usr/local/bin/p4-fusion-1.2/vendor/helix-core-api/linux && \
-    tar -C /usr/local/bin/p4-fusion-1.2/vendor/helix-core-api/linux -xzvf /usr/local/bin/p4-fusion-1.2/vendor/helix-core-api/linux/p4api.tgz --strip 1
+    mkdir -p /usr/local/bin/p4-fusion-src/vendor/helix-core-api/linux && \
+    mv p4api.tgz /usr/local/bin/p4-fusion-src/vendor/helix-core-api/linux && \
+    tar -C /usr/local/bin/p4-fusion-src/vendor/helix-core-api/linux -xzvf /usr/local/bin/p4-fusion-src/vendor/helix-core-api/linux/p4api.tgz --strip 1
 
-WORKDIR /usr/local/bin/p4-fusion-1.2
+WORKDIR /usr/local/bin/p4-fusion-src
 
 # Build p4-fusion
-RUN ./generate_cache.sh Release
+RUN bash -c './generate_cache.sh Release'
 RUN ./build.sh
 
 WORKDIR /usr/local/bin
 # Move exe file to /usr/local/bin where other executables are located
-RUN mv ./p4-fusion-1.2/build/p4-fusion/p4-fusion ./ && rm -rf /usr/local/bin/p4-fusion-1.2
+RUN mv /usr/local/bin/p4-fusion-src/build/p4-fusion/p4-fusion /usr/local/bin && rm -rf /usr/local/bin/p4-fusion-src
 # p4-fusion installation completed here
 
 RUN mkdir -p /data/repos && chown -R sourcegraph:sourcegraph /data/repos
