--- a/docker-images/syntax-highlighter/Cargo.toml
+++ b/docker-images/syntax-highlighter/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 license = "MIT"
 
 [dependencies]
-syntect = { git = "https://github.com/slimsag/syntect" }
+syntect = { path = "../../../syntect" }
 rocket = { git = "https://github.com/SergioBenitez/Rocket" } # Rocket 0.5 is not released yet: https://github.com/SergioBenitez/Rocket/issues/19#issuecomment-684122645
 rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" } # Rocket 0.5 is not released yet: https://github.com/SergioBenitez/Rocket/issues/19#issuecomment-684122645
 serde = "1.0"
@@ -14,3 +14,4 @@ serde_json = "1.0"
 serde_derive = "1.0"
 rayon = "1.0"
 lazy_static = "1.0"
+signal-hook = "0.3"
